@@ -1,0 +1,2 @@
+-- Domesticated Felboar (Quest: I Was A Lot Of Things... (Id: 10514))
+UPDATE `creature_template` SET `lootid`=21195 WHERE `entry`=21195;
